Complete basic number functionality
Numbers functioning with display, all clear button working as intended, negation button works
but not too sure about implementation.

--- a/index.html
+++ b/index.html
@@ -11,29 +11,33 @@
         <div class="calculator">
             <div id="display">
                 <p id="sign">-</p>
-                <p>1234567890</p>
+                <p id="number">1234567890</p>
             </div>
             <div class="buttons">
-                <div id="row1">
-                    <button id="7">7</button>
-                    <button id="8">8</button>
-                    <button id="9">9</button>
+                <div id="row-one">
+                    <button id="all-clear">AC</button>
+                    <button id="negate">+/-</button>
+                </div>
+                <div id="row-two">
+                    <button id="seven">7</button>
+                    <button id="eight">8</button>
+                    <button id="nine">9</button>
                     <button id="divide">/</button>
                 </div>
-                <div id="row2">
-                    <button id="4">4</button>
-                    <button id="5">5</button>
-                    <button id="6">6</button>
+                <div id="row-three">
+                    <button id="four">4</button>
+                    <button id="five">5</button>
+                    <button id="six">6</button>
                     <button id="multiply">*</button>
                 </div>
-                <div id="row3">
-                    <button id="1">1</button>
-                    <button id="2">2</button>
-                    <button id="3">3</button>
+                <div id="row-four">
+                    <button id="one">1</button>
+                    <button id="two">2</button>
+                    <button id="three">3</button>
                     <button id="subtract">-</button>
                 </div>
-                <div id="row4">
-                    <button id="0">7</button>
+                <div id="row-five">
+                    <button id="zero">0</button>
                     <button id="dot">.</button>
                     <button id="equals">=</button>
                     <button id="add">+</button>
