Fix bugs and add backspace key

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div id="row-one">
                     <button id="all-clear">AC</button>
                     <button id="negate">+/-</button>
+                    <button id="backspace">Erase</button>
                 </div>
                 <div id="row-two">
                     <button id="seven">7</button>
